--- a/talks/social-distance/index.html
+++ b/talks/social-distance/index.html
@@ -61,8 +61,7 @@
 
 
         <section>
-            <h1>The Magician’s Handbook</h1>
-            <h3>Inside Java Framework Sorcery</h3>
+            <h1>Maintain Social Distance this Spring</h1>
             <br>
             <br>
             <br>
