--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -255,6 +255,14 @@
         </section>
 
         <section>
+            <h2>Debugging</h2>
+
+            <p><em>-Djdk.proxy.ProxyGenerator.saveGeneratedFiles=true</em></p>
+            <p><em>-Dcglib.debugLocation=./cglib-classes</em></p>
+            <p><em>Debug point: InvocationHandler.invoke()</em></p>
+        </section>
+
+        <section>
             <h2>Debugging Spring</h2>
             <ul>
                 <li>Enable <code>--debug</code> mode</li>
