--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -229,7 +229,7 @@
                 <li>Simulate AOP using higher-order functions</li>
                 <li>Use decorators/lambdas to wrap behavior</li>
                 <li>Gives full control over execution flow</li>
-                <li>No proxies, no annotation magic — it's all explicit</li>
+                <li>No proxies, no annotation magic - it's all explicit</li>
             </ul>
         </section>
 
