--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -274,6 +274,10 @@
         </section>
 
         <section>
+            <h3>Horror Stories</h3>
+        </section>
+
+        <section>
             <h2>Key Takeaways</h2>
             <ul>
                 <li>Spring magic = proxies + reflection + bytecode tricks</li>
