--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -283,6 +283,7 @@
                 <li>Spring magic = proxies + reflection + bytecode tricks</li>
                 <li>Know limitations: self-invocation, visibility, performance</li>
                 <li>Prefer explicit APIs over hidden behavior when possible</li>
+                <li>Know proxy limitations</li>
             </ul>
         </section>
 
