--- a/talks/magicians-handbook/index.html
+++ b/talks/magicians-handbook/index.html
@@ -292,6 +292,10 @@
         </section>
 
         <section>
+            <h2>Exercise</h2>
+        </section>
+
+        <section>
             <blockquote>
                 Using common sense is the ultimate Best Practice™.
             </blockquote>
