--- a/talks/index.html
+++ b/talks/index.html
@@ -48,26 +48,18 @@
 
     <tr>
         <td></td>
-        <td data-location="38.91347454196663, -104.82988265712038" data-place="Colorado Springs Marriott">dev2next</td>
-        <td><a href="https://www.dev2next.com">What Can You Learn from Golang?</a></td>
-        <td>1.10.2025</td>
-        <td>Colorado Springs/USA</td>
-    </tr>
-
-    <tr>
-        <td></td>
-        <td data-location="38.91347454196663, -104.82988265712038" data-place="Colorado Springs Marriott">dev2next</td>
-        <td><a href="https://www.dev2next.com">Virtual Threads in Action</a></td>
-        <td>1.10.2025</td>
-        <td>Colorado Springs/USA</td>
-    </tr>
-
-    <tr>
-        <td></td>
         <td data-location="59.950481960858255, 11.05043708447923" data-place="NOVA Spektrum">JavaZone 2025</td>
         <td><a href="https://2025.javazone.no/en">What Can a Java Developer Learn from Golang?</a></td>
         <td>3.09.2025</td>
         <td>Oslo/Norway</td>
+    </tr>
+
+    <tr>
+        <td></td>
+        <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2025</td>
+        <td><a href="https://www.jcrete.org"></a>AI for dev productivity boost - real-life stories</td>
+        <td>4.08.2024</td>
+        <td>Kolymvari/Greece</td>
     </tr>
 
     <tr>
