--- a/talks/index.html
+++ b/talks/index.html
@@ -48,6 +48,14 @@
 
     <tr>
         <td></td>
+        <td data-location="52.235243764109576, 20.987984590000636" data-place="ADN Conference Center">Confitura 2025</td>
+        <td><a href="https://2025.confitura.pl">What Can a Java Developer Learn from Golang?</a></td>
+        <td>19.09.2025</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="59.950481960858255, 11.05043708447923" data-place="NOVA Spektrum">JavaZone 2025</td>
         <td><a href="https://2025.javazone.no/en">What Can a Java Developer Learn from Golang?</a></td>
         <td>3.09.2025</td>
