--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -125,8 +125,8 @@
 
         <section>
             <h4>You can have modularity without microservices</h4>
-            <img class="fragment" src="img/monolith.png" width="40%"/>
-            <h5 class="fragment">Naturally, you don't get all the benefits, but it's not a demanding investment</h5>
+            <img class="fragment" src="img/modular.png" width="50%"/>
+            <small class="fragment">Naturally, you don't get all the benefits, but it's not a demanding investment</small>
         </section>
 
         <section>
