--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -170,6 +170,11 @@ func main() {
             </ul>
         </section>
 
+        <section>
+            <img src="img/java-invade-go.jpg" width="60%" alt="gopher"/>
+            <small><small><a href="https://www.reddit.com/r/golang/comments/pnjfg2/not_sure_which_one_describes_it_better/">https://www.reddit.com/r/golang/comments/pnjfg2/not_sure_which_one_describes_it_better/</a></small></small>
+        </section>
+
         <section data-transition="slide-in fade-out">
             <h4>So, what can we learn from Golang?</h4>
         </section>
