--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -254,7 +254,7 @@ func main() {
 
         <section>
             <h3>Strong Focus on Pragmatism</h3>
-            <h5>Example: Memory Models</h5>
+            <h5>Example: Concurrency and Memory Models</h5>
         </section>
 
         <section>
