--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -171,6 +171,10 @@ func main() {
         </section>
 
         <section>
+            <h3>...but it does have nulls! (nils)</h3>
+        </section>
+
+        <section>
             <img src="img/java-invade-go.jpg" width="60%" alt="gopher"/>
             <small><small><a href="https://www.reddit.com/r/golang/comments/pnjfg2/not_sure_which_one_describes_it_better/">https://www.reddit.com/r/golang/comments/pnjfg2/not_sure_which_one_describes_it_better/</a></small></small>
         </section>
