--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -163,6 +163,8 @@ func main() {
                 <li>Three data structures: array/slice/maps</li>
                 <li>One loop type</li>
                 <li>No inheritance</li>
+                <li>No exceptions</li>
+                <li>No enums</li>
                 <li>No mocking</li>
                 <li>No advanced syntax</li>
                 <li>No magical frameworks - wiring is explicit</li>
@@ -209,11 +211,12 @@ func main() {
 
         <section>
             <h3>No bikeshedding over:</h3>
-            <h4 class="fragment">Tabs vs. spaces</h4>
-            <h4 class="fragment">Build tools</h4>
-            <h4 class="fragment">Parentheses around conditions</h4>
-            <h4 class="fragment">Semantic versioning</h4>
-            <h4 class="fragment">Which linter to use</h4>
+            <h4 class="fragment">code formatting (go fmt)</h4>
+            <h4 class="fragment">testing framework</h4>
+            <h4 class="fragment">build tools (go build)</h4>
+            <h4 class="fragment">dependency management (Go Modules)</h4>
+            <h4 class="fragment">versioning scheme</h4>
+            <h4 class="fragment">linters (go vet)</h4>
             <h4 class="fragment">...</h4>
         </section>
 
