--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -174,6 +174,12 @@ func main() {
 
         <section>
             <h3>...but it does have nulls! (nils)</h3>
+
+            <img src="img/hoare.jpg" width="30%"/>
+            <blockquote
+                    cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
+                "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
+            </blockquote>
         </section>
 
         <section>
